SONAR-8798 pass sonar.search.javaOpts in a file to ES